--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   get_it: ^7.7.0
+  provider: ^6.1.2
   flutter:
     sdk: flutter
 
